removed duplicate gitignore file. renamed session to entry for every instance relating to surf journal rather than to browser or db session. added rough draft form on entry_add page. cleaned up and commented model.py.

--- a/templates/board_quiver.html
+++ b/templates/board_quiver.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block body %}
 
-<div id="session-list">
+<div id="entries-list">
 <!-- see all_melons.html for scaffold on how to pull 
 and display info from the database
  -->
