--- a/templates/surf_entries_list.html
+++ b/templates/surf_entries_list.html
@@ -3,7 +3,7 @@
 <h2>all logged surfs</h2>
 
 
-<div id="session-list">
+<div id="entries-list">
 <!-- see all_melons.html for scaffold on how to pull 
 and display info from the database
  -->
