--- a/templates/base.html
+++ b/templates/base.html
@@ -18,10 +18,10 @@
             </div>
         </div>
         <div class="inner cover">
-            <a href="/sessions" class="btn btn-lg btn-default">view existing sessions</a>
-            <a href="/addSession" class="btn btn-lg btn-default">create a new entry</a>
+            <a href="/entries" class="btn btn-lg btn-default">view existing entries</a>
+            <a href="/addEntry" class="btn btn-lg btn-default">create a new entry</a>
             <a href="/board_quiver" class="btn btn-lg btn-default">view/ edit quiver</a>
-            <a href="/sessionsSummary" class="btn btn-lg btn-default">view/ back to home/ about page</a>
+            <a href="/entriesSummary" class="btn btn-lg btn-default">view/ back to home/ about page</a>
         </div>
         <div class="container">
             {% with messages = get_flashed_messages() %}
