--- a/templates/giantList_features.html
+++ b/templates/giantList_features.html
@@ -4,7 +4,7 @@
 <div id = "giantList">
 <h2>all the potential information for all logged surfs</h2>
 <h3>(this info should be moved to an about/ help page at some point)</h3>
-<!-- <div id="session-list">
+<!-- <div id="entries-list">
  --><!-- see all_melons.html for scaffold on how to pull 
 and display info from the database
  -->
