added date and time to entries table, setting up for login and api calls.

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,9 +19,9 @@
         </div>
         <div class="inner cover">
             <a href="/entries" class="btn btn-lg btn-default">view existing entries</a>
-            <a href="/addEntry" class="btn btn-lg btn-default">create a new entry</a>
+            <a href="/addEntryGoTo" class="btn btn-lg btn-default">create a new entry</a>
             <a href="/board_quiver" class="btn btn-lg btn-default">view/ edit quiver</a>
-            <a href="/entriesSummary" class="btn btn-lg btn-default">view/ back to home/ about page</a>
+            <a href="/about" class="btn btn-lg btn-default">back to home/ about page</a>
         </div>
         <div class="container">
             {% with messages = get_flashed_messages() %}
