--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@ at time of git clone. leaving it for now in case it proves useful-->
               <h1 class="cover-heading">Ocean Riders' Journal</h1>
             <p class="lead">placeholder surfer ipsum flotsam jetsam placeholder
             <p class="lead">
-            <a href="/entriesSummary" class="btn btn-lg btn-default">Do Something Now</a>
+            <a href="/about" class="btn btn-lg btn-default">What Do I Do?!</a>
             </p>
           </div>
 
