changed list of entries to table. temporarily simplified time to datetime now. started building locations table.

--- a/templates/surf_entries_list.html
+++ b/templates/surf_entries_list.html
@@ -3,12 +3,22 @@
 <h2>all logged surfs</h2>
 
 
-<div id="entries-list">
+
+<h4>
+This page will be deprecated in favor of:<br>
+surf_entries_summary.html<br>
+<br>
+but currently the wiring is not working. revisit.
+</h4>
+
+<!-- <div id="entries-list">
+
+
 <!-- see all_melons.html for scaffold on how to pull 
 and display info from the database
- -->
+-->
 
-<h3>This is where I will display all of the previously logged sessions</h3>
+<h3>Display all of the previously logged sessions</h3>
 
 
 
@@ -24,10 +34,7 @@ and display info from the database
 <h4>extra bonus options:</h4>
 <li>pull a screengrab from surfline's video feed from that day and time????</li>
 <li>link back to any of the other create with some info seeded from current entry?</li>
-<!-- <li></li>
-<li></li>
-<li></li>
-<li></li> -->
+
 
 
 </div>
