location and user tables seeded. one user for now, just to set up model. locations currently selected norCal spots only. seed script working. modified model to use scoped sessions.

--- a/templates/surf_entries_summary.html
+++ b/templates/surf_entries_summary.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block body %}
 
-<h3>Display all of the previously logged sessions</h3>
+<h3>Display all of the previously logged journal entries</h3>
 
 
 <table style="width:100%">
