combined surf_entries_summary and surf_entries_list functionality, now only using surf_entries_summary template. some cleanup and added noted in placeholder templates. added MSW logo to surf_entries_summary page. additonal commenting in code.

--- a/templates/surf_entries_summary.html
+++ b/templates/surf_entries_summary.html
@@ -50,7 +50,13 @@
 <li>pull a screengrab from surfline's video feed from that day and time????</li>
 
 <li>link back to any of the other create with some info seeded from current entry?</li>
+<br>
+<br>
+<a href="http://magicseaweed.com"><img src="http://im-1-uk.msw.ms/msw_powered_by.png"></a>
+
+
 {% endblock %}
+
 
 <!-- this is an example from the ratings app that includes the option to link to a "details" page
  -->
