--- a/templates/surf_entries_list.html
+++ b/templates/surf_entries_list.html
@@ -2,13 +2,31 @@
 {% block body %}
 <h2>all logged surfs</h2>
 
+<!-- 
 
+THIS PAGE IS NOW OBSOLETE.
+
+ -->
 
 <h4>
 This page will be deprecated in favor of:<br>
 surf_entries_summary.html<br>
 <br>
-but currently the wiring is not working. revisit.
+but currently the wiring is not working. <br>
+currently can only view sessions after adding one.
+>>>
+"add_entry" route is passing results of db query<br>
+to the surf_entries_summary template.<br>
+<br>
+need to add same functionality to this route.<br>
+<br>
+or...<br>
+remove it from that route,<br>
+and make surf_entries_summary <br> 
+and surf_entries_list <br>
+both point to the same route/ template?
+<br>
+revisit.
 </h4>
 
 <!-- <div id="entries-list">
