some cleanup and commenting. fixed the add entry duplicate issue.

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
         </div>
         <div class="inner cover">
             <a href="/entries" class="btn btn-lg btn-default">view existing entries</a>
-            <a href="/addEntryGoTo" class="btn btn-lg btn-default">create a new entry</a>
+            <a href="/addEntryForm" class="btn btn-lg btn-default">create a new entry</a>
             <a href="/board_quiver" class="btn btn-lg btn-default">view/ edit quiver</a>
             <a href="/about" class="btn btn-lg btn-default">back to home/ about page</a>
         </div>
