--- a/templates/surf_entries_summary.html
+++ b/templates/surf_entries_summary.html
@@ -33,7 +33,15 @@
 
 
 <li></li>
-<li></li>
+<br>
+<h3>
+todo: fix the fact that every time I refresh this page, <br>
+previous entry is duplicated (in table and in display)
+<br>
+fix datetime format to display more human-readably
+<br>
+</h3>
+<br>
 <li></li>
 
 
