changed db name. edited model for entries table to start adding API info.

--- a/templates/surf_entry_add.html
+++ b/templates/surf_entry_add.html
@@ -33,7 +33,6 @@ Beach Name:<br>
 <input type="text" name = "beach_name">
 <br>
 
-
 <!-- 
 got work to do on beach input.
 ultimately don't want to hard-code the drop-down.
@@ -55,6 +54,7 @@ make <option> from selected attr of each loc object:
 Board Ridden:<br>
 <input type="text" name = "board_name">
 <br>
+<!-- how to make this field mandatory? -->
 Did you wish you'd brought a different board?:<br>
 <input type="radio" name = "board_pref" value = "board_smaller">(smaller)
 <input type="radio" name = "board_pref" value = "board_ok">(just right)
