--- a/templates/surf_entry_add.html
+++ b/templates/surf_entry_add.html
@@ -6,7 +6,7 @@
 <div id="entries-list">
 <h4>(this form is a work in progress)</h4>
 
-<form action="/addEntry">
+<form action="/addEntryToDB">
 
 <!-- <form action="/addEntry" method="post">
  -->
@@ -30,7 +30,10 @@ End Time (as HH:MM with "AM" or "PM"):<br>
 
 
 Beach Name:<br>
-<input type="text" name = "beach_name">
+<input type="text" name = "beach_name"> (eg: Bolinas, Ocean Beach)
+<br>
+Spot Name:<br>
+<input type="text" name = "spot_name"> (eg: patch, Sloat)
 <br>
 
 <!-- 
