--- a/templates/surf_entries_summary.html
+++ b/templates/surf_entries_summary.html
@@ -24,13 +24,14 @@
 
  <!-- 
 also need to query table to convert loc_id to beach name for display
+** need to set up db relations to make this work?! **
   -->
  
     {% for entry in entries %}
 	<tr>    
     	<td>{{entry.date_time_start.strftime('%m/%d/%Y %I:%m %p')}}</td>
     	<td>{{entry.date_time_end.strftime('%I:%m %p')}}</td>
-    	<td>{{entry.loc_id}}</td>
+    	<td>{{entry.loc.beach_name}}</td>
         <td>{{entry.spot_name}}</td>
         <td>{{entry.swell1_dirDeg}}{{entry.swell1_dirComp}}</td>
         <td>{{entry.swell1_ht}} @ {{entry.swell1_per}} sec</td>
@@ -48,7 +49,7 @@ also need to query table to convert loc_id to beach name for display
 <li>scale table elements, getting crowded</li>
 <li>&#10004; fix datetime format to display more human-readably</li>
 <li>fix wording of board pref (in table-to-entry, or entry-to-display?)</li>
-<li>display beach name (get from loc_id)</li>
+<li>&#10004; display beach name (get from loc_id)</li>
 <li>add MSW graphics (arrows) to swell dir display</li>
 <li>convert swell dir from MSW format to global degrees?</li>
 <br>
