board quiver table working in template form and display.

--- a/templates/board_quiver.html
+++ b/templates/board_quiver.html
@@ -24,9 +24,9 @@ make input fields allow autofill if existing board info matches typing?
 	<tr>    
     	<td>{{board.nickname}} </td>
     	<td>{{board.length_ft}}' {{board.length_in}}"</td>
-    	<td>{{board.type}}</td>
+    	<td>{{board.category}}</td>
     	<td>{{board.shaper}}</td>
-    	<td>{{board.model}}</td>
+    	<td>{{board.shape}}</td>
     	<td>{{board.fins}} </td>
 
     </tr>
