--- a/templates/surf_entries_summary.html
+++ b/templates/surf_entries_summary.html
@@ -24,9 +24,9 @@
     	<td>{{entry.date_time_end.strftime('%I:%m %p')}}</td>
     	<td>{{entry.loc.beach_name}}</td>
         <td>{{entry.spot_name}}</td>
-        <td>{{entry.swell1_dirDeg}}{{entry.swell1_dirComp}}</td>
+        <td>{{entry.swell1_dir_deg}}{{entry.swell1_dir_comp}}</td>
         <td>{{entry.swell1_ht}} @ {{entry.swell1_per}} sec</td>
-    	<td>{{entry.board.nickname}} {{entry.board.lenght_ft}}' {{entry.board.lenght_in}}" {{entry.board.fins}}</td>
+    	<td>{{entry.board.nickname}} {{entry.board.length_ft}}' {{entry.board.length_in}}" {{entry.board.fins}}</td>
     	<td>{{entry.board_pref}}</td>
     </tr>
 	{% endfor %}
