--- a/templates/board_quiver.html
+++ b/templates/board_quiver.html
@@ -35,21 +35,23 @@ make input fields allow autofill if existing board info matches typing?
 
 
 <h4>core info to include:</h4>
+<li>implement editability/ add board functionality</li>
 <li>&#10004;nickname</li>
 <li>&#10004;length (in x&#39; x&#34;)</li>
 <li>&#10004;brand/ shaper</li>
-<li>custom? need separate field, or in model ok?</li>
-
+<li>fix display of edge cases (ie handplane no dimensions given, don't display '&"</li>
+<br>
+<br>
 <h4>Additional features:</h4>
 <li>photo(s) of board</li>
 <li>set as default board?</li>
 <li>mark as borrowed/ who does it belong to?</li>
 <li>mark board as retired?</li>
+<li>field to denote whether custom shaped? or input into model ok?</li>
 <li>field for specific measurements</li>
 <li>field for serial #</li>
-<li></li>
-<li></li>
-<li></li>
+<br>
+<br>
 <h4>extra bonus options:</h4>
 <li>link back to session view and display all sessions using that board?</li>
 
